Instrucciones de uso e instalación de la aplicación

--- a/app.json
+++ b/app.json
@@ -19,10 +19,16 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "app.de.una.hackaton.digitaliza2"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "045f7838-33c8-43c9-a3a5-f9b8724ee698"
+      }
     }
   }
 }
